--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script src="word.js"></script>
         <script src="script.js" defer></script>
-        <title>Wordle Clone</title>
+        <title>Wordle test</title>
     </head>
     <body>
           <div class="alert-container" data-alert-container></div>
